# lidar_2d_mapping

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo_spawn.launch  gazebo_spawn.launch.py  slam_localization.launch.py  slam_mapping.launch.py
maps/: map_save.pgm  map_save.yaml  map_serialize.data
params/: bridge_params.yaml  mapper_params_localization.yaml
rviz/: slam_view.rviz
urdf/: myrobot.gazebo  myrobot.xacro
worlds/: my_world.sdf
