<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  
	<name>lidar_2d_mapping</name>
	<version>0.0.0</version>
  
	<description> ROS2 package to perform 2D mapping and robot localization using LiDAR with slam_toolbox </description>
  
	<maintainer email="yashikasharma0301@gmail.com" />
  
	<license>Apache-2.0</license>
  
	<buildtool_depend>ament_cmake</buildtool_depend>
  
	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
 	<depend>tf2</depend>
  
	<exec_depend>xacro</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>ros_gz</exec_depend>
	<exec_depend>ros_gz_bridge</exec_depend>
	<exec_depend>ros_gz_sim</exec_depend>
  
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
  
	<export>
		<build_type>ament_cmake</build_type>
	</export>
  
</package>
